// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsList renders with error 1`] = `
<PopperComponent
  className="datepicker-popper"
  hidePopper={true}
  popperComponent={null}
  popperModifiers={
    Object {
      "preventOverflow": Object {
        "boundariesElement": "viewport",
        "enabled": true,
        "escapeWithReference": true,
      },
    }
  }
  popperPlacement="bottom-start"
  targetComponent={
    <div
      className="react-datepicker__input-container"
    >
      <DatePickerInput
        className=""
        disabled={false}
        error={true}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={false}
        value="2 — 20 February 2000"
      />
    </div>
  }
/>
`;

exports[`ControlsList renders with predefined period 1`] = `
<PopperComponent
  className="datepicker-popper"
  hidePopper={true}
  popperComponent={null}
  popperModifiers={
    Object {
      "preventOverflow": Object {
        "boundariesElement": "viewport",
        "enabled": true,
        "escapeWithReference": true,
      },
    }
  }
  popperPlacement="bottom-start"
  targetComponent={
    <div
      className="react-datepicker__input-container"
    >
      <DatePickerInput
        className=""
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={false}
        value="2 — 20 February 2000"
      />
    </div>
  }
/>
`;
